Project

General

Profile

Actions

Bug #8463

closed

common/acl: 'resultcount' may be used uninitialized in this function

Added by Toomas Soome about 6 years ago. Updated about 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
2017-07-05
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Build error from gcc 6:

    /code/illumos-gate/usr/src/common/acl/acl_common.c: In function 'ace_list_to_aent':
    /code/illumos-gate/usr/src/common/acl/acl_common.c:1212:4: error: 'resultcount' may be used uninitialized in this function [-Werror=maybe-uninitialized]
        cacl_free(result, resultcount * sizeof (aclent_t));
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk about 6 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit b2ce6e4ebc262a57e5c5d0224b2577526261a0e4

commit  b2ce6e4ebc262a57e5c5d0224b2577526261a0e4
Author: Toomas Soome <tsoome@me.com>
Date:   2017-07-28T19:49:30.000Z

    8463 common/acl: 'resultcount' may be used uninitialized in this function
    Reviewed by: Patrick Mooney <pmooney@pfmooney.com>
    Reviewed by: Yuri Pankov <yuripv@gmx.com>
    Reviewed by: Igor Kozhukhov <igor@dilos.org>
    Approved by: Robert Mustacchi <rm@joyent.com>

Actions

Also available in: Atom PDF