8463 common/acl: 'resultcount' may be used uninitialized in this function Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Robert Mustacchi <rm@joyent.com>